2016-06-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-2

	* R/functions.R (TeXunits): the function now
	works when both 'from' and 'to' are vectors

2016-06-14  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.1-1

	* NAMESPACE: document and export TeXunits

2016-06-13  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (TeXunits,.TeXunit.table): add
	remaining units from TeXBook

2016-03-31  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (rmspace): remove function -- use
	trim instead

2016-02-22  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.1-0

	* man/btable.Rd, latexrule.Rd: added files

2015-11-17  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-6

	* vignettes/tex_helpers.Rnw: added file

	* R/functions.R (btable): new function
	(latexrule): new function

2015-10-20  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (toHTML.text): new method

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

	* NEWS: added file (empty; it only points to the ChangeLog)

2015-10-15  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-5

	* R/functions.R (char2num): the function now uses
	'Sys.localeconv()[["decimal_point"]]' as the decimal separator;
	but see the caveats at ?Sys.localeconv

	* NAMESPACE: 'expstr' is no longer exported (use 'strexp' instead)

	* man/rmrp.Rd: added man page

	* man/strexp.Rd: added man page

	* man/char2num.Rd: added man page

2015-09-29  Enrico Schumann  <es@enricoschumann.net>

	* man/valign.Rd: added man page

2015-09-29  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.0-4

	* man/trim.Rd: new help page for 'trim'

	* R/functions.R (rmspace): added call to '.Deprecated'.

2015-08-18  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.0-3
